<resources>
    <string name="app_name">Watchlist</string>

    <!-- menu -->
    <string name="action_settings">Settings</string>

    <!-- titles -->
    <string name="movies">Movies</string>
    <string name="add_movie">Add movie</string>
    <string name="edit_movie">Edit movie</string>
    <string name="settings">Settings</string>

    <!-- navigation -->
    <string name="next">Next</string>
    <string name="save">Save</string>

    <!-- preferences -->
    <string name="sort_category">Sort</string>
    <string name="database_category">Database</string>

    <string name="sort_by">Sort By</string>
    <string name="sort_order">Sort Order</string>
    <string name="db_mode">Database Mode</string>

    <string name="sort_by_title">Title</string>
    <string name="sort_by_year">Year</string>

    <string name="order_asc">Asc</string>
    <string name="order_desc">Desc</string>

    <string name="mode_room">Room</string>
    <string name="mode_sqlite_open_helper">SQLiteOpenHelper</string>

</resources>